variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: not found: type int
var x:int = 0
      ^RunFour:2: error: not found: value estsurBiscuit
while (x!=4) {avance(); if (estsurBiscuit()) {x = x+1};} 
                            ^